--- a/index.html
+++ b/index.html
@@ -5,95 +5,164 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <title>Flute Repair Calculator</title>
 </head>
 
 <body>
+    <div class="container">
+        <h1 class="display-3 mb-3">Repair Calculator</h1>
+        <form id="repair-form">
+            <div class="row">
+                <div class="col-md-6 col-lg-4">
+                    <div class="card mb-3">
+                        <h5 class="card-header text-bg-dark">Instrument</h5>
+                        <div class="card-body">
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="instrument" id="flute" value="flute">
+                                <label class="form-check-label" for="flute">
+                                    Flute
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" id="piccolo" name="instrument"
+                                    value="piccolo">
+                                <label class="form-check-label" for="piccolo">
+                                    Piccolo
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" id="low" name="instrument" value="low">
+                                <label class="form-check-label" for="low">
+                                    Low Flute
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
-    <h1>Repair Calculator</h1>
+                <div class="col-md-6 col-lg-4">
+                    <div class="card mb-3">
+                        <h5 class="card-header text-bg-dark">Level</h5>
+                        <div class="card-body">
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" id="level-1" name="level" value="1">
+                                <label class="form-check-label" for="1">Level 1</label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" id="level-2" name="level" value="2">
+                                <label class="form-check-label" for="2">Level 2</label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" id="level-3" name="level" value="3">
+                                <label class="form-check-label" for="3">Level 3</label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" id="level-low" name="level" value="low">
+                                <label class="form-check-label" for="low">Low flute</label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
-    <form id="repair-form">
-        <h2>Pick all that apply:</h2>
+                <div class="col-md-6 col-lg-4">
+                    <div class="card mb-3">
+                        <h5 class="card-header text-bg-dark">Service</h5>
+                        <div class="card-body">
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" id="full-coa" name="service"
+                                    value="full-coa">
+                                <label class="form-check-label" for="full-coa">Full COA</label>
+                            </div>
 
-        <p>Instrument:</p>
-        <input type="radio" id="flute" name="instrument" value="flute">
-        <label for="flute">Flute</label><br>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" id="partial-coa" name="service"
+                                    value="partial-coa">
+                                <label class="form-check-label" for="partial-coa">Partial COA</label>
+                            </div>
 
-        <input type="radio" id="piccolo" name="instrument" value="piccolo">
-        <label for="piccolo">Piccolo</label><br>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" id="repad" name="service" value="repad">
+                                <label class="form-check-label" for="repad">Repad</label>
+                            </div>
 
-        <input type="radio" id="low" name="instrument" value="low">
-        <label for="low">Low Flute</label>
-
-        <p>Level:</p>
-        <input type="radio" id="level-1" name="level" value="1">
-        <label for="1">Level 1</label><br>
-        
-        <input type="radio" id="level-2" name="level" value="2">
-        <label for="2">Level 2</label><br>
-        
-        <input type="radio" id="level-3" name="level" value="3">
-        <label for="3">Level 3</label>
-<br>
-        <input type="radio" id="level-low" name="level" value="low">
-        <label for="low">Low flute</label><br>
-
-        <p>Service:</p>
-        <input type="radio" id="full-coa" name="service" value="full-coa">
-        <label for="full-coa">Full COA</label><br>
-
-        <input type="radio" id="partial-coa" name="service" value="partial-coa">
-        <label for="partial-coa">Partial COA</label><br>
-
-        <input type="radio" id="repad" name="service" value="repad">
-        <label for="repad">Repad</label><br>
-
-        <input type="radio" id="overhaul" name="service" value="overhaul">
-        <label for="overhaul">Overhaul</label><br>
-<br>
-        <label for="pad">Number of pads replaced:</label>
-        <input type="number" id="pad" name="pad" min="0" value="0">
-<br>
-        <label for="adjustment">Number of adjustment papers/materials modified or replaced:</label>
-        <input type="number" id="adjustment" name="adjustment" min="0" value="0">
-        <br>
-        <label for="shopRate">Number of hours at shop rate:</label>
-        <input type="number" id="shopRate" name="shopRate" min="0" step="0.25" value="0">
-<br>
-<br>
-        <div>
-            <input type="checkbox" id="straubConversion" name="straubConversion">
-            <label for="straubConversion">Add conversion to Straubinger pads</label>
-        </div>
-
-        <div>
-            <input type="checkbox" id="emergencyFee" name="emergencyFee">
-            <label for="emergencyFee">Add emergency fee</label>
-        </div>
-
-        <div>
-            <input type="checkbox" id="headjointCork" name="headjointCork">
-            <label for="headjointCork">Add standalone headjoint cork</label>
-        </div>
-
-        <div>
-            <input type="checkbox" id="donut" name="donut">
-            <label for="donut">Add high E facilitator installation</label>
-        </div>
-
-        <div>
-            <input type="checkbox" id="caseRepair" name="caseRepair">
-            <label for="caseRepair">Add case repair base rate</label>
-        </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" id="overhaul" name="service"
+                                    value="overhaul">
+                                <label class="form-check-label" for="overhaul">Overhaul</label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
 
-        <button>Calculate</button>
-    </form>
+            <div class="row">
+                <div class="mb-3">
+                    <label class="form-label" for="pad">Number of pads replaced:</label>
+                    <div class="col-sm-6 col-md-3" data-bs-toggle="tooltip" data-bs-placement="right" title="COAs only">
+                        <input class="form-control" type="number" id="pad" name="pad" min="0" max="18" value="0">
+                    </div>
+                </div>
 
-    <div id="results"></div>
+                <div class="mb-3">
+                    <label class="form-label" for="adjustment">Number of adjustment papers / materials modified or
+                        replaced:</label>
+                    <div class="col-sm-6 col-md-3" data-bs-toggle="tooltip" data-bs-placement="right" title="COAs and Repads only">
+                        <input class="form-control" type="number" id="adjustment" name="adjustment" min="0" value="0">
+                    </div>
+                </div>
+
+                <div class="mb-3">
+                    <label class="form-label" for="shopRate">Number of hours at shop rate:</label>
+                    <div class="col-sm-6 col-md-3" data-bs-toggle="tooltip" data-bs-placement="right" title="Any hours above and beyond the selected service">
+                        <input class="form-control" type="number" id="shopRate" name="shopRate" min="0" step="0.25"
+                            value="0">
+                    </div>
+                </div>
+            </div>
+
+            <div class="row my-3">
+                <h3 class="display-6">À la Carte Services</h3>
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="straubConversion" name="straubConversion">
+                    <label class="form-check-label" for="straubConversion">Add conversion to Straubinger pads</label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="emergencyFee" name="emergencyFee">
+                    <label class="form-check-label" for="emergencyFee">Add emergency fee</label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="headjointCork" name="headjointCork">
+                    <label class="form-check-label" for="headjointCork">Add standalone headjoint cork</label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="donut" name="donut">
+                    <label class="form-check-label" for="donut">Add high E facilitator installation</label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="caseRepair" name="caseRepair">
+                    <label class="form-check-label" for="caseRepair">Add case repair base rate</label>
+                </div>
+            </div>
+
+
+            <button class="btn btn-dark">Calculate</button>
+        </form>
+
+        <div id="results"></div>
+    </div>
 
     <script src="prices.js"></script>
     <script src="calc.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+        crossorigin="anonymous"></script>
+    <script>
+        const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
+        const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
+    </script>
 </body>
 
 </html>
