minor style changes, added bootswatch

--- a/index.html
+++ b/index.html
@@ -7,17 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <title>Flute Repair Calculator</title>
+    <link rel="stylesheet" href="bootstrap.css">
+        <title>Flute Repair Calculator</title>
 </head>
 
 <body>
-    <div class="container">
-        <h1 class="display-3 mb-3">Repair Calculator</h1>
+    <div class="container my-5">
+        <h1 class="display-3 my-4 text-primary">Repair Calculator</h1>
         <form id="repair-form">
             <div class="row">
                 <div class="col-md-6 col-lg-4">
                     <div class="card mb-3">
-                        <h5 class="card-header text-bg-dark">Instrument</h5>
+                        <h5 class="card-header bg-primary text-light">Instrument</h5>
                         <div class="card-body">
                             <div class="form-check">
                                 <input class="form-check-input" type="radio" name="instrument" id="flute" value="flute">
@@ -44,7 +45,7 @@
 
                 <div class="col-md-6 col-lg-4">
                     <div class="card mb-3">
-                        <h5 class="card-header text-bg-dark">Level</h5>
+                        <h5 class="card-header bg-primary text-light">Level</h5>
                         <div class="card-body">
                             <div class="form-check">
                                 <input class="form-check-input" type="radio" id="level-1" name="level" value="1">
@@ -68,7 +69,7 @@
 
                 <div class="col-md-6 col-lg-4">
                     <div class="card mb-3">
-                        <h5 class="card-header text-bg-dark">Service</h5>
+                        <h5 class="card-header bg-primary text-light">Service</h5>
                         <div class="card-body">
                             <div class="form-check">
                                 <input class="form-check-input" type="radio" id="full-coa" name="service"
@@ -109,14 +110,16 @@
                 <div class="mb-3">
                     <label class="form-label" for="adjustment">Number of adjustment papers / materials modified or
                         replaced:</label>
-                    <div class="col-sm-6 col-md-3" data-bs-toggle="tooltip" data-bs-placement="right" title="COAs and Repads only">
+                    <div class="col-sm-6 col-md-3" data-bs-toggle="tooltip" data-bs-placement="right"
+                        title="COAs and Repads only">
                         <input class="form-control" type="number" id="adjustment" name="adjustment" min="0" value="0">
                     </div>
                 </div>
 
                 <div class="mb-3">
                     <label class="form-label" for="shopRate">Number of hours at shop rate:</label>
-                    <div class="col-sm-6 col-md-3" data-bs-toggle="tooltip" data-bs-placement="right" title="Any hours above and beyond the selected service">
+                    <div class="col-sm-6 col-md-3" data-bs-toggle="tooltip" data-bs-placement="right"
+                        title="Any hours above and beyond the selected service">
                         <input class="form-control" type="number" id="shopRate" name="shopRate" min="0" step="0.25"
                             value="0">
                     </div>
@@ -125,33 +128,38 @@
 
             <div class="row my-3">
                 <h3 class="display-6">À la Carte Services</h3>
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" id="straubConversion" name="straubConversion">
-                    <label class="form-check-label" for="straubConversion">Add conversion to Straubinger pads</label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" id="emergencyFee" name="emergencyFee">
-                    <label class="form-check-label" for="emergencyFee">Add emergency fee</label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" id="headjointCork" name="headjointCork">
-                    <label class="form-check-label" for="headjointCork">Add standalone headjoint cork</label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" id="donut" name="donut">
-                    <label class="form-check-label" for="donut">Add high E facilitator installation</label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" id="caseRepair" name="caseRepair">
-                    <label class="form-check-label" for="caseRepair">Add case repair base rate</label>
+                <div class="col">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" id="straubConversion" name="straubConversion">
+                        <label class="form-check-label" for="straubConversion">Add conversion to Straubinger
+                            pads</label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" id="emergencyFee" name="emergencyFee">
+                        <label class="form-check-label" for="emergencyFee">Add emergency fee</label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" id="headjointCork" name="headjointCork">
+                        <label class="form-check-label" for="headjointCork">Add standalone headjoint cork</label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" id="donut" name="donut">
+                        <label class="form-check-label" for="donut">Add high E facilitator installation</label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" id="caseRepair" name="caseRepair">
+                        <label class="form-check-label" for="caseRepair">Add case repair base rate</label>
+                    </div>
                 </div>
             </div>
 
-
-            <button class="btn btn-dark">Calculate</button>
+            <button class="btn btn-warning">Calculate</button>
         </form>
 
-        <div id="results"></div>
+        <div id="results">
+            <!--results display here-->
+        </div>
+
     </div>
 
     <script src="prices.js"></script>
